[metadata]
name = knappe_deform
version = 0.1a1
url =
project_urls =
    Source Code = https://github.com/HorsemanWSGI/knappe_deform
license = BSD-3-Clause
author = Novareto GmbH & Souheil Chelfouh
author_email = trollfot@gmail.com
maintainer = Souheil Chelfouh
maintainer_email = trollfot@gmail.com
description = Deform integration for knappe.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.9

[options.packages.find]
where=src
